--- a/index.html
+++ b/index.html
@@ -19,20 +19,31 @@
 <body>
 	<div class="navbar navbar-default navbar-fixed-top" role="navigation" name="role">
 		<div class="container">
-			<ul class="nav navbar-nav" id="topmenu_btns">
-				<li><img src="UI/何.png" alt=""></li>
-				<li><a href="#role">主&emsp;&emsp;页</a></li>
-				<li><a href="#info">个人信息</a></li>
-				<li><a href="#skill">技能水平</a></li>
-				<li><a href="#project">项目介绍</a></li>
-				<li><a href="#foot">联系方式</a></li>
-			</ul>
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example-navbar-collapse">
+					<span class="sr-only">切换导航</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#role"><img id="he" src="UI/何.png" alt=""></a>
+			</div>
+			<div class="collapse navbar-collapse" id="example-navbar-collapse">
+				<ul class="nav navbar-nav">
+						<li><a href="#role">主&emsp;&emsp;页</a></li>
+						<li><a href="#info">个人信息</a></li>
+						<li><a href="#skill">技能水平</a></li>
+						<li><a href="#project">项目介绍</a></li>
+						<li><a href="#foot">联系方式</a></li>
+				</ul>
+			</div>
 		</div>
 	</div>
 	<div id="intro">
 		<div class="container">
 			<h1>&lt;html&gt;</h1>
-			<h2>前端工程师/hedu@hedudu.top</h2>
+			<h2>前端工程师</h2>
+			<h3>hedu@hedudu.top</h3>
 		</div>
 	</div>
 	<div id="brief" name="brief">
@@ -71,10 +82,10 @@
 								<li>具有良好的英语听说读写能力。</li>
 							</ol>
 						</font>
-					</p>
+					<p></p>
 					<p><b>工作类型</b></p>
 					<p><font>
-							<ol>
+							<ol>9
 								<li>熟练掌握HTML、JavaScript+jQuery、DIV+CSS等网页设计语言，能满足日常的开发需要；</li>
 								<li>熟悉Sql Server的数据库设计,能熟练掌握存储过程、视图、事务等进行编码开发；</li>
 								<li>熟悉运用面向对象编程思想，进行B/S和C/S结构的开发的开发；</li>
@@ -84,7 +95,7 @@
 								<li>熟悉项目开发流程，能运用敏捷开发模式进行项目开发；</li>
 							</ol>
 						</font>
-					</p>
+					<p></p>
 				</div>
 				<div class="col-lg-3">
 					<p><b>姓名:</b><font>何督</font></p>
