--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
 <meta charset="utf-8">
@@ -85,7 +85,7 @@
 					<p></p>
 					<p><b>工作类型</b></p>
 					<p><font>
-							<ol>9
+							<ol>
 								<li>熟练掌握HTML、JavaScript+jQuery、DIV+CSS等网页设计语言，能满足日常的开发需要；</li>
 								<li>熟悉Sql Server的数据库设计,能熟练掌握存储过程、视图、事务等进行编码开发；</li>
 								<li>熟悉运用面向对象编程思想，进行B/S和C/S结构的开发的开发；</li>
